Header fonts changed

--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -10,3 +10,19 @@
 dd {
     margin-left: 30px !important;
 }
+
+h1 {
+    font-size: 2.6em !important;
+}
+h2 {
+    font-size: 2.2em !important;
+}
+h3 {
+    font-size: 2.0em !important;
+}
+h4 {
+    font-size: 1.6em !important;
+}
+h5 {
+    font-size: 1.2em !important;
+}
