--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -1,33 +1,45 @@
+/*
+ * Custom CSS file extending the Bootswatch theme
+ * All CSS elements are based on bootstrap 3.3.6
+ *
+ * Author:    Felix Simkovic
+ * Date:      01/01/2017
+ * Copyright: University of Liverpool
+ */
 .navbar-collapse {
-    padding-right: 0px;
-    padding-left: 0px;
+padding-right: 0px;
+padding-left: 0px;
 }
 
 .nav > li > a {
-    padding: 15px 30px 15px 0px;
+padding: 15px 30px 15px 0px;
+}
+
+.headerlink {
+visibility: hidden;
 }
 
 dd {
-    margin-left: 30px;
+margin-left: 30px;
 }
 
 h1 {
-    font-size: 2.0em;
+font-size: 2.0em;
 }
 h2 {
-    font-size: 1.8em;
+font-size: 1.8em;
 }
 h3 {
-    font-size: 1.6em;
+font-size: 1.6em;
 }
 h4 {
-    font-size: 1.4em;
+font-size: 1.4em;
 }
 h5 {
-    font-size: 1.2em;
+font-size: 1.2em;
 }
 
 img {
-    max-width: 100%;
-    max-height: 100%;
+max-width: 100%;
+max-height: 100%;
 }
