--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -32,6 +32,10 @@ max-width: 100%;
 max-height: 100%;
 }
 
+@media print {
+a[href]:after {content: none !important;}
+}
+
 .navbar-collapse {
 padding-right: 0px;
 padding-left: 0px;
