fixed navbar issue and added contributors to footer

--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -8,128 +8,238 @@
  */
 
 dd {
-margin-left: 30px;
+    margin-left: 30px;
 }
 
 h1 {
-font-size: 2.0em;
+    font-size: 2.0em;
 }
+
 h2 {
-font-size: 1.8em;
+    font-size: 1.8em;
 }
+
 h3 {
-font-size: 1.6em;
+    font-size: 1.6em;
 }
+
 h4 {
-font-size: 1.4em;
+    font-size: 1.4em;
 }
+
 h5 {
-font-size: 1.2em;
+    font-size: 1.2em;
 }
 
 img {
-max-width: 100%;
-max-height: 100%;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 @media print {
-a[href]:after {content: none !important;}
+    a[href]:after {
+        content: none !important;
+    }
 }
 
-.navbar-collapse {
-padding-right: 0px;
-padding-left: 0px;
+@media (min-width: 768px) {
+    .navbar-collapse {
+        padding-left: 0;
+        padding-right: 0;
+    }
 }
 
-.nav > li > a {
-padding: 15px 30px 15px 0px;
+@media (max-width: 768px) {
+    .navbar-collapse li {
+        padding-left: 20px;
+    }
+}
+
+.nav>li>a {
+    padding: 15px 30px 15px 0px;
 }
 
 .headerlink {
-visibility: hidden;
+    visibility: hidden;
 }
 
-/* Amino acid colors */
-.ala {color: #882D17;}
-.cys {color: #F3C300;}
-.asp {color: #875692;}
-.glu {color: #F38400;}
-.phe {color: #A1CAF1;}
-.gly {color: #BE0032;}
-.his {color: #C2B280;}
-.ile {color: #848482;}
-.lys {color: #008856;}
-.leu {color: #E68FAC;}
-.met {color: #0067A5;}
-.asn {color: #F99379;}
-.pro {color: #604E97;}
-.gln {color: #F6A600;}
-.arg {color: #B3446C;}
-.ser {color: #DCD300;}
-.thr {color: #8DB600;}
-.val {color: #654522;}
-.trp {color: #E25822;}
-.tyr {color: #2B3D26;}
-.unk {color: #000000;}
+.ala {
+    color: #882D17;
+}
+
+.cys {
+    color: #F3C300;
+}
+
+.asp {
+    color: #875692;
+}
+
+.glu {
+    color: #F38400;
+}
+
+.phe {
+    color: #A1CAF1;
+}
+
+.gly {
+    color: #BE0032;
+}
+
+.his {
+    color: #C2B280;
+}
+
+.ile {
+    color: #848482;
+}
+
+.lys {
+    color: #008856;
+}
+
+.leu {
+    color: #E68FAC;
+}
+
+.met {
+    color: #0067A5;
+}
+
+.asn {
+    color: #F99379;
+}
+
+.pro {
+    color: #604E97;
+}
+
+.gln {
+    color: #F6A600;
+}
+
+.arg {
+    color: #B3446C;
+}
+
+.ser {
+    color: #DCD300;
+}
+
+.thr {
+    color: #8DB600;
+}
+
+.val {
+    color: #654522;
+}
+
+.trp {
+    color: #E25822;
+}
+
+.tyr {
+    color: #2B3D26;
+}
+
+.unk {
+    color: #000000;
+}
 
 .btn-example a:link {
-   color: #ffffff;
+    color: #ffffff;
 
 }
+
 .btn-example a:visited {
-   color: #ffffff;
-}
-.btn-example a:hover {
-   color: #ffffff;
-   text-decoration: none;
-}
-.btn-example a:active {
-   color: #ffffff;
-   text-decoration: none;
+    color: #ffffff;
 }
 
+.btn-example a:hover {
+    color: #ffffff;
+    text-decoration: none;
+}
+
+.btn-example a:active {
+    color: #ffffff;
+    text-decoration: none;
+}
 
 .btn-default {
-background-image: -webkit-linear-gradient(#6d7070, #3a3c3d 50%, #3a3c3d);
-background-image: -o-linear-gradient(#6d7070, #3a3c3d 50%, #3a3c3d);
-background-image: -webkit-gradient(linear, left top, left bottom, from(#6d7070), color-stop(50%, #3a3c3d), to(#3a3c3d));
-background-image: linear-gradient(#6d7070, #3a3c3d 50%, #3a3c3d);
-background-repeat: no-repeat;
-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff6d7070', endColorstr='#ff3a3c3d', GradientType=0);
--webkit-filter: none;
-        filter: none;
-border: 1px solid #3a3c3d;
+    background-image: -webkit-linear-gradient(#6d7070, #3a3c3d 50%, #3a3c3d);
+    background-image: -o-linear-gradient(#6d7070, #3a3c3d 50%, #3a3c3d);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#6d7070), color-stop(50%, #3a3c3d), to(#3a3c3d));
+    background-image: linear-gradient(#6d7070, #3a3c3d 50%, #3a3c3d);
+    background-repeat: no-repeat;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff6d7070', endColorstr='#ff3a3c3d', GradientType=0);
+    -webkit-filter: none;
+    filter: none;
+    border: 1px solid #3a3c3d;
 }
+
 .btn-default:hover {
-background-image: -webkit-linear-gradient(#6d7070, #2b2d2d 50%, #2b2d2d);
-background-image: -o-linear-gradient(#6d7070, #2b2d2d 50%, #2b2d2d);
-background-image: -webkit-gradient(linear, left top, left bottom, from(#6d7070), color-stop(50%, #2b2d2d), to(#2b2d2d));
-background-image: linear-gradient(#6d7070, #2b2d2d 50%, #2b2d2d);
-background-repeat: no-repeat;
-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff6d7070', endColorstr='#ff2b2d2d', GradientType=0);
--webkit-filter: none;
-        filter: none;
-border: 1px solid #3a3c3d;
+    background-image: -webkit-linear-gradient(#6d7070, #2b2d2d 50%, #2b2d2d);
+    background-image: -o-linear-gradient(#6d7070, #2b2d2d 50%, #2b2d2d);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#6d7070), color-stop(50%, #2b2d2d), to(#2b2d2d));
+    background-image: linear-gradient(#6d7070, #2b2d2d 50%, #2b2d2d);
+    background-repeat: no-repeat;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff6d7070', endColorstr='#ff2b2d2d', GradientType=0);
+    -webkit-filter: none;
+    filter: none;
+    border: 1px solid #3a3c3d;
 }
+
 .btn-primary {
-background-image: -webkit-linear-gradient(#43cfe9, #0079c4 50%, #0079c4);
-background-image: -o-linear-gradient(#43cfe9, #0079c4 50%, #0079c4);
-background-image: -webkit-gradient(linear, left top, left bottom, from(#43cfe9), color-stop(50%, #0079c4), to(#0079c4));
-background-image: linear-gradient(#43cfe9, #0079c4 50%, #0079c4);
-background-repeat: no-repeat;
-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff43cfe9', endColorstr='#ff0079c4', GradientType=0);
--webkit-filter: none;
-        filter: none;
-border: 1px solid #0079c4;
+    background-image: -webkit-linear-gradient(#43cfe9, #0079c4 50%, #0079c4);
+    background-image: -o-linear-gradient(#43cfe9, #0079c4 50%, #0079c4);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#43cfe9), color-stop(50%, #0079c4), to(#0079c4));
+    background-image: linear-gradient(#43cfe9, #0079c4 50%, #0079c4);
+    background-repeat: no-repeat;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff43cfe9', endColorstr='#ff0079c4', GradientType=0);
+    -webkit-filter: none;
+    filter: none;
+    border: 1px solid #0079c4;
 }
+
 .btn-primary:hover {
-background-image: -webkit-linear-gradient(#43cfe9, #006488 50%, #006488);
-background-image: -o-linear-gradient(#43cfe9, #006488 50%, #006488);
-background-image: -webkit-gradient(linear, left top, left bottom, from(#43cfe9), color-stop(50%, #006488), to(#006488));
-background-image: linear-gradient(#43cfe9, #006488 50%, #006488);
-background-repeat: no-repeat;
-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff43cfe9', endColorstr='#ff006488', GradientType=0);
--webkit-filter: none;
-        filter: none;
-border: 1px solid #0079c4;
+    background-image: -webkit-linear-gradient(#43cfe9, #006488 50%, #006488);
+    background-image: -o-linear-gradient(#43cfe9, #006488 50%, #006488);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#43cfe9), color-stop(50%, #006488), to(#006488));
+    background-image: linear-gradient(#43cfe9, #006488 50%, #006488);
+    background-repeat: no-repeat;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff43cfe9', endColorstr='#ff006488', GradientType=0);
+    -webkit-filter: none;
+    filter: none;
+    border: 1px solid #0079c4;
+}
+
+footer {
+    background: #f9f9f9;
+    padding: 20px 0;
+}
+
+.footer-links {
+    line-height: 48px;
+}
+
+.footer-links ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.footer-links-left li {
+    float: left;
+}
+
+.footer-links-right li {
+    float: right;
+}
+
+.footer-links li a {
+    margin-right: 15px;
+    transition: all 0.3s ease-in-out;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
 }
